# Colorful

./: README.md  io.github.diegoivanme.colorful.json  meson.build
data/: io.github.diegoivanme.colorful.appdata.xml.in  io.github.diegoivanme.colorful.desktop.in  io.github.diegoivanme.colorful.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: Application.vala  ColorEntry.vala  Window.vala  main.vala  meson.build
src/Widgets/: Chooser.vala  ColorEntry.vala  ColorImage.vala  HueSlider.vala  Window.vala
src/resources/: colorful.gresource.xml  style.css  window.ui
src/vapi/: config.vapi
